fixed horizontal scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,8 @@
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+		max-width: 100%;
+		overflow-x: hidden;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
